poppins, site wide font

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,1 +1,8 @@
 @import 'bulma/css/bulma.css';
+@import '@fontsource/poppins'; 
+@import '@fontsource/poppins/400.css';
+@import '@fontsource/poppins/700.css'; 
+
+* {
+    font-family: 'Poppins';
+}
