--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -51,3 +51,17 @@
 .border-transition:hover::before {
     transform: scale(1);
 }
+
+.circle-number {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: white;
+    color: #008c8c;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 0 auto 10px;
+}
