fontawesome, up arrow, cdn link

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,10 @@
     font-family: 'Poppins';
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .hero-section {
     height: 90vh;
     position: relative;
