--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -45,7 +45,7 @@ html {
     left: 0;
     right: 0;
     bottom: 0;
-    border: 2px solid #008c8c;
+    border: 2px solid white;
     transform: scale(0);
     transition: transform 0.5s ease;
     z-index: -1;
